# heic2jpg

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  LOGGING_IMPLEMENTATION.md  README.md  README.zh-CN.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  security.yml  test.yml
.kiro/specs/heic-to-jpg-converter/: design.md  requirements.md  tasks.md
.kiro/specs/heic2jpg/: design.md  tasks.md
src/heic2jpg/: __init__.py  __main__.py  analyzer.py  batch_processor.py  cli.py  converter.py  exif.py  logging_config.py  models.py  optimizer.py  orchestrator.py
src/heic_converter/: __init__.py  __main__.py  analyzer.py  batch_processor.py  cli.py  config.py  converter.py  errors.py  exif.py  filesystem.py  logging_config.py  models.py  optimizer.py  orchestrator.py
tests/: __init__.py  conftest.py  strategies.py
tests/integration/: __init__.py  test_orchestrator_integration.py  test_quality_config_integration.py
tests/property/: __init__.py  test_analyzer_properties.py  test_config_properties.py  test_converter_properties.py  test_error_handling_properties.py  test_exif_properties.py  test_filesystem_properties.py  test_optimizer_properties.py  test_orchestrator_properties.py
tests/unit/: __init__.py  test_analyzer.py  test_batch_processor.py  test_cli.py  test_config.py  test_converter.py  test_errors.py  test_exif.py  test_filesystem.py  test_logging_config.py  test_models.py  test_optimizer.py  test_orchestrator.py
